--- a/CleanCodeExample.Application/CleanCodeExample.Application.csproj
+++ b/CleanCodeExample.Application/CleanCodeExample.Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
   </ItemGroup>
 
   <PropertyGroup>
