--- a/CleanCodeExample.Api/appsettings.json
+++ b/CleanCodeExample.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "server=(local); database=CleanCode; Trusted_Connection=True"
+    "Database": "server=(local); database=CleanCode; Trusted_Connection=True",
+    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=master;User Id=sa;Password=MyV3ryStrong@Passw0rd"
   },
 
   "DatabaseOptions": {
@@ -23,5 +24,14 @@
     "ExpiryMinutes": 0,
     "Issuer": "",
     "Audience": ""
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "My Health Checks",
+        "Uri": "/health"
+      }
+    ],
+    "EvaluationTimeInSeconds": 5
   }
 }
